# hackfest-nov-2023

./: .gitignore  README.md
backend/: gunicorn.conf.py  gunicorn_config.py  main.py  pyproject.toml  railway.json  requirements.txt
backend/data/: encryption.py  filter.py  generate.py  mockdata.py
backend/routers/: chat.py  loading.py  planning.py  users.py
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/home/: page.tsx
frontend/app/user/: page.tsx
frontend/components/: FromLogin.tsx  Loading.tsx  OutOfTokens.tsx  Sidebar.tsx  UserPortal.tsx
frontend/components/editor/: DisplaySubtasks.tsx  SideEditor.tsx  UserInput.tsx  custom.scss
frontend/components/playground/: ChatView.tsx  EditPlan.tsx  Graph.tsx  LoadingPlan.tsx  NewPlan.tsx  ResourceView.tsx
frontend/components/playground/chat/: ChatInput.tsx  StarterExamples.tsx
frontend/components/playground/custom/: CustomNode.tsx
frontend/components/playground/load/: Loading.tsx  MakeChanges.tsx
frontend/components/playground/load/makechanges/: ChangeBaseTasks.tsx
frontend/components/portal/: Check.ts  SignIn.tsx  SignUp.tsx
frontend/components/sidebar/: PromptTypeIcon.tsx  UserCard.tsx
frontend/components/userinfo/: EnterApiKey.tsx  Integrations.tsx  TokenHistory.tsx  TopProfile.tsx  UserInsights.tsx
frontend/components/userinfo/insights/: CountAnimation.tsx  TokenCount.tsx
