[tool.poetry]
name = "seepickle-server"
version = "0.1.0"
description = "This starts up the seepickle server"
authors = ["danmxli <danmuxingli@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"